menghapus by-pendaftaran pada controller antrian karena mirip pada pendaftaran controller, dan menghapus pembuatan user otomatis pada pendf controller
